syntax = "proto3";

package tic_tac_toe;
option csharp_namespace = "TicTacToe.Protobuf";

// type : "move"
// packet_type : REQUEST
message MovePayload { uint32 position = 1; }

// type : "game_state"
// packet_type : DEFAULT
message GameStatePayload {
  repeated string player = 1;
  repeated string map = 2;
  uint32 current_player = 3;
  optional string winner = 4;
}